next version of web file

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
 
-    <h1> hello benomar how are you ?</h1>
-    <span> are you okay  huh</span>
+    <h1> hello coursera student i'm thrilled about this course! </h1>
+
 </body>
 
 </html>
